_shardsvrCheckMetadataConsistencySecondaryParticipant: ignore allowMigrations flag

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc1016
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-07-20
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Even though _shardsvrCheckMetadataConsistencySecondaryParticipant only runs with the authoritative flag enabled, during setFCV there can be legacy DDLs while the command can already run. The allowMigrations flag is only kept in-memory by shards, so the atClusterTime sent by the primary to secondaries is not enough to guarantee that they see an updated value of this flag. The solution is to simply ignore this flag on secondaries.

            Assignee:
            Aitor Esteve Alvarado
            Reporter:
            Aitor Esteve Alvarado
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: