SERVER-130594 Ignore allowMigrations on CMC on secondaries (#57770)

GitOrigin-RevId: 118a75f63ca74a536a7756300a40179fc9cf9553