src/mongo/db/global_catalog/metadata_consistency_validation/shardsvr_check_metadata_consistency_participant_command.cpp
@@ -120,7 +120,7 @@ public:
                     primaryShardId,
                     checkRangeDeletionIndexes,
                     checkIndexes,
-                    true /* asPrimaryNode */);
+                    true /* asRSPrimaryNode */);
 
             // Build a streaming executor that merges the secondaries' cursors (or null if there are
             // none). The locally-computed inconsistencies are prepended by
