src/mongo/db/global_catalog/metadata_consistency_validation/shardsvr_check_metadata_consistency_secondary_participant_command.cpp
@@ -110,7 +110,7 @@ public:
                     primaryShardId,
                     checkRangeDeletionIndexes,
                     checkIndexes,
-                    false /* asPrimaryNode */);
+                    false /* asRSPrimaryNode */);
 
             const auto& shardId = ShardingState::get(opCtx)->shardId();
             for (auto& inconsistency : inconsistencies) {
